frontent ui complete

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,3 +24,18 @@ a{
   border-bottom: 1px solid rgb(10, 25, 237) !important;
   box-shadow: 0 1px 0 0 #000;
 }
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.item{
+  width: 30%;
+}
+
+.home-card{
+  max-width: 500px;
+  height: max-content;
+  margin: 26px auto;
+}
