--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,4 +38,11 @@ a{
   max-width: 500px;
   height: max-content;
   margin: 26px auto;
+  padding: 20px;
+}
+
+#toast-container{
+  top: 30px;
+  right: 20px;
+  left: auto !important;
 }
