--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,10 @@ a{
   border-bottom: 1px solid rgb(10, 25, 237) !important;
   box-shadow: 0 1px 0 0 #000;
 }
+.input-field input[type=password]:focus {
+  border-bottom: 1px solid rgb(10, 25, 237) !important;
+  box-shadow: 0 1px 0 0 #000;
+}
 .gallery{
   display: flex;
   flex-wrap: wrap;
